--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="crime_title">Crimes</string>
     <string name="date_picker_title">Date of crime: </string>
     <string name="time_picker_title">Time of crime: </string>
+    <string name="choise_dialog_title">Do you want to edit DATE or TIME?</string>
+    <string name="choise_dialog_date">Date</string>
+    <string name="choise_dialog_time">Time</string>
+
+
 </resources>
