--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+
     <string name="app_name">CriminalIntent</string>
     <string name="crime_title_hint">Enter a title for the crime.</string>
     <string name="crime_title_label">Title</string>
@@ -9,7 +10,10 @@
     <string name="time_picker_title">Time of crime: </string>
     <string name="choise_dialog_title">Do you want to edit DATE or TIME?</string>
     <string name="choise_dialog_date">Date</string>
-    <string name="choise_dialog_time">Time</string>
-
+    <string name="new_crime">New Crime</string>
+    <string name="show_subtitle">Show Subtitle</string>
+    <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="subtitle">If u see something, say something.</string>
+    <string name="delete_crime">Delete</string>
 
 </resources>
