--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="time_picker_title">Time of crime: </string>
     <string name="choise_dialog_title">Do you want to edit DATE or TIME?</string>
     <string name="choise_dialog_date">Date</string>
+    <string name="choise_dialog_time">Date</string>
+
     <string name="new_crime">New Crime</string>
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
