--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="subtitle">If u see something, say something.</string>
     <string name="delete_crime">Delete</string>
 
+    <string name="no_crimes">No Crimes</string>
+
+
 </resources>
